--- a/templates/editspending.html
+++ b/templates/editspending.html
@@ -17,17 +17,17 @@
 
 {% block content %}
 
+<!--Заголовок-->
 <div class="card ">
     <div class="card-header">
-        <p class="text-center text-info my-0">
+        <p class="text-center h5">
             <a data-toggle="collapse" href="#headerBodyCard">
                 Заголовок
             </a>
         </p>
-        <!--<p class="text-info text-center my-0">Заголовок</p>-->
     </div>
 
-    {% if spending.consumers_list.__len__() > 0%}
+    {% if spending.consumers_list.__len__() > 0 %}
     <div class="card-body collapse" id="headerBodyCard">
     {% else %}
     <div class="card-body collapse show" id="headerBodyCard">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row row align-items-center">
+            <div class="row align-items-center">
                 <div class="col-auto">
                     <div class="form-group">
                         <label for="spendingPayer">Оплатил</label>
@@ -81,103 +81,104 @@
 </div>
 
 {% if spending.amount > 0 %}
+<!--Потребители-->
+<div class="card">
+    <div class="card-header">
+        <p class="text-center h5">Потребители</p>
+    </div>
+    <div class="card-body justify-content-center row">
+        <div class="col">
+            {% if spending.is_calculated() %}
+            <h5 class="text-success text-center">Расход распределён</h5>
+            {% else %}
+            <h5 class="text-danger text-center">Нераспределённая сумма: <span class="badge badge-danger">{{"{0:8.2f}".format(spending.get_undistributed_value())}}</span>
+            </h5>
+            {%endif%}
 
-    <div class="card">
-        <div class="card-header">
-            <p class="text-info text-center my-0">Потребители</p>
-        </div>
-        <div class="card-body justify-content-center row">
-            <div class="col">
-                {% if spending.is_calculated() %}
-                <h5 class="text-success text-center">Расход распределён</h5>
-                {% else %}
-                <h5 class="text-danger text-center">Нераспределённая сумма: <span class="badge badge-danger">{{"{0:8.2f}".format(spending.get_undistributed_value())}}</span>
-                </h5>
-                {%endif%}
-
-                <table class="table table-striped table-sm">
-                    <thead class="thead-light">
-                    <tr>
-                        <th></th>
-                        <th>Сумма</th>
-                        <th>Имя</th>
-                        <th></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for c in spending.consumers_list %}
-                    <tr>
-                        <td>
-                            <form method="post" name="editperson"
-                                  action="{{url_for('spending.edit_person', consumer_number=spending.consumers_list.index(c))}}">
-                                <input type="image" src="{{url_for('static', filename='edit.png')}}" alt="Редактировать"
-                                       class="pictobutton">
-                            </form>
-                        </td>
-                        <td>{{"{0:8.2f}".format(c.amount)}}</td>
-                        <td>{{c.person.name}}</td>
-                        <td>
-                            <form method="post" name="deleteperson"
-                                  action="{{url_for('spending.remove_person', consumer_number=spending.consumers_list.index(c))}}">
-                                <input type="image" src="{{url_for('static', filename='cross.png')}}" alt="Удалить"
-                                       class="pictobutton">
-                            </form>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                    {% if spending.is_calculated() %}
-                    {% else %}
-                    <tr>
-                        <form method="post" name="addperson" id="addpersonID"
-                              action="{{url_for('spending.add_person')}}">
-                            <td>
-                                {% if consumer %}
-                                <input class="form-control" name="amount" type="text" size="10" value="{{consumer.amount}}">
-                                {% else%}
-                                <input class="form-control" name="amount" type="text" size="10" value="0">
-                                {%endif%}
-                            </td>
-                            <td>
-                                <select name="name" class="form-control" form="addpersonID">
-                                    {% for person in budget.persons_list %}
-                                    {% if consumer != None and consumer.person.name == person.name %}
-                                    <option selected>{{person.name}}</option>
-                                    {% else%}
-                                    <option>{{person.name}}</option>
-                                    {% endif %}
-                                    {% endfor %}
-                                    <option class="text-primary my-0">Добавить всех</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input name="addperson" type="image" src="{{url_for('static', filename='plus.png')}}"
-                                       alt="Добавить"
-                                       class="pictobutton">
-                            </td>
+            <table class="table table-striped table-sm">
+                <thead class="thead-light">
+                <tr>
+                    <th></th>
+                    <th>Сумма</th>
+                    <th>Имя</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for c in spending.consumers_list %}
+                <tr>
+                    <td>
+                        <form method="post" name="editperson"
+                              action="{{url_for('spending.edit_person', consumer_number=spending.consumers_list.index(c))}}">
+                            <input type="image" src="{{url_for('static', filename='edit.png')}}" alt="Редактировать"
+                                   class="pictobutton">
                         </form>
-                    </tr>
-                    {% endif %}
-                    </tbody>
-                </table>
-
-                {% if spending.consumers_list.__len__() > 0 %}
-                <form method="post" name="calc"
-                      action="{{url_for('spending.calc')}}">
-                    <div class="row">
-                        <div class="form-group col">
-                            <input name="aver" type="submit" value="Поровну" class="form-control btn btn-primary">
-                            <!--<small class="form-text text-info text-center my-0">Среднее арифметическое</small>-->
-                        </div>
-                        <div class="form-group col">
-                            <input name="weighted" type="submit" value="C весом" class="form-control btn btn-primary">
-                            <!--<small class="form-text text-info text-center my-0">Среднее взвешенное</small>-->
-                        </div>
-                    </div>
-                </form>
+                    </td>
+                    <td>{{"{0:8.2f}".format(c.amount)}}</td>
+                    <td>{{c.person.name}}</td>
+                    <td>
+                        <form method="post" name="deleteperson"
+                              action="{{url_for('spending.remove_person', consumer_number=spending.consumers_list.index(c))}}">
+                            <input type="image" src="{{url_for('static', filename='cross.png')}}" alt="Удалить"
+                                   class="pictobutton">
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+                {% if spending.is_calculated() %}
+                {% else %}
+                <tr>
+                    <form method="post" name="addperson" id="addpersonID"
+                          action="{{url_for('spending.add_person')}}">
+                        <td></td>
+                        <td>
+                            {% if consumer %}
+                            <input class="form-control" name="amount" type="text" size="10" value="{{consumer.amount}}">
+                            {% else%}
+                            <input class="form-control" name="amount" type="text" size="10" value="0">
+                            {%endif%}
+                        </td>
+                        <td>
+                            <select name="name" class="form-control" form="addpersonID">
+                                {% for person in budget.persons_list %}
+                                {% if consumer != None and consumer.person.name == person.name %}
+                                <option selected>{{person.name}}</option>
+                                {% else%}
+                                <option>{{person.name}}</option>
+                                {% endif %}
+                                {% endfor %}
+                                <option class="text-primary my-0">Добавить всех</option>
+                            </select>
+                        </td>
+                        <td>
+                            <input name="addperson" type="image" src="{{url_for('static', filename='plus.png')}}"
+                                   alt="Добавить"
+                                   class="pictobutton">
+                        </td>
+                    </form>
+                </tr>
                 {% endif %}
-            </div>
+                </tbody>
+            </table>
+
+            {% if spending.consumers_list.__len__() > 0 %}
+            <form method="post" name="calc"
+                  action="{{url_for('spending.calc')}}">
+                <div class="row">
+                    <div class="form-group col">
+                        <input name="aver" type="submit" value="Поровну" class="form-control btn btn-primary">
+                        <!--<small class="form-text text-info text-center my-0">Среднее арифметическое</small>-->
+                    </div>
+                    <div class="form-group col">
+                        <input name="weighted" type="submit" value="C весом" class="form-control btn btn-primary">
+                        <!--<small class="form-text text-info text-center my-0">Среднее взвешенное</small>-->
+                    </div>
+                </div>
+            </form>
+            {% endif %}
         </div>
     </div>
+</div>
 
 {% else %}
 <h5 class="text-info text-center">
