--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,38 @@
 {% endblock %}
 
 {% block content %}
-<div class="d-flex flex-column">
-    <p class="text-center">
-        Веб-сервис поиска должников в компании. Для начала создайте новый бюджет или выберете
-        существующий из списка на панели навигации.
-    </p>
-    <form method="post" action="{{url_for('main')}}">
-        <div class="d-flex flex-column align-items-center flex-fill">
-            <input name="budgetname" id="budgetname"
-                   class="form-control w-auto" placeholder="Имя файла" required>
-            <input type="submit" value="Создать" class="btn btn-success btn-lg mt-2">
+
+<div class="row justify-content-center">
+    <div class="col">
+        {% if 'user_name' in session: %}
+        <p class="text-center">
+            Для начала создайте новый бюджет или выберете существующий из списка на панели навигации.
+        </p>
+        <form method="post" action="{{url_for('main')}}">
+            <div class="d-flex flex-column align-items-center flex-fill">
+                <input name="budgetname" id="budgetname"
+                       class="form-control w-auto" placeholder="Имя файла" required>
+                <input type="submit" value="Создать" class="btn btn-success btn-lg mt-2">
+            </div>
+        </form>
+        {% else %}
+        <p class="text-center">
+            Веб-сервис поиска должников в компании.
+        </p>
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <a href="{{url_for('auth.login')}}" class="btn btn-success my-2">Вход</a>
+            </div>
         </div>
-    </form>
+        <div class="row justify-content-center">
+            <div class="col-auto">
+               <a href="{{url_for('auth.register')}}" class="btn btn-info">Регистрация</a>
+            </div>
+        </div>
+        {% endif %}
+    </div>
 </div>
+
+
 
 {% endblock %}
