--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-auto pt-4">
-            <small class="text-muted">by ukrop-slam_v. 2019</small>
+            <small class="text-muted">by ukrop-slam_v. 2019-2022</small>
         </div>
     </div>
 </div>
