Баг с отображением суммы траты

--- a/templates/editspending.html
+++ b/templates/editspending.html
@@ -45,7 +45,11 @@
                 <div class="col-auto">
                     <div class="form-group">
                         <label for="spendingAmount">Сумма</label>
-                        <input type="text" class="form-control" name="spendingamount" id="spendingAmount"  size="5">
+                        {% if spending.consumers_list.__len__() > 0 %}
+                        <input type="text" class="form-control" name="spendingamount" id="spendingAmount" value="{{spending.amount}}" size="5">
+                        {% else %}
+                        <input type="text" class="form-control" name="spendingamount" id="spendingAmount" size="5">
+                        {% endif %}
                     </div>
                 </div>
             </div>
