Не отображется Ок, пока не распределена трата

--- a/templates/editspending.html
+++ b/templates/editspending.html
@@ -199,7 +199,7 @@
             {% if spending.is_calculated() and budget.is_participant(spending.payer.name) %}
             <input class="form-control btn-success" name="ok" type="submit" value="Ок">
             {% else %}
-            <input class="form-control btn-secondary" disabled name="ok" type="submit" value="Ок">
+            <!--<input class="form-control btn-secondary" disabled name="ok" type="submit" value="Ок"> -->
             {% endif %}
         </div>
         <div class="form-group col">
