--- a/templates/editspending.html
+++ b/templates/editspending.html
@@ -45,7 +45,7 @@
                 <div class="col-auto">
                     <div class="form-group">
                         <label for="spendingAmount">Сумма</label>
-                        {% if spending.amount = 0 %}
+                        {% if spending.amount == 0 %}
                         <input type="text" class="form-control" name="spendingamount" id="spendingAmount" size="5">
                         {% else %}
                         <input type="text" class="form-control" name="spendingamount" id="spendingAmount" value="{{spending.amount}}" size="5">
