--- a/templates/editspending.html
+++ b/templates/editspending.html
@@ -152,7 +152,7 @@
                                 {% endfor %}
                                 {% if consumer %}
                                 {% else%}
-                                <option selected class="text-primary my-0">Добавить всех</option>
+                                <option selected class="text-primary font-italic my-0">Все</option>
                                 {% endif %}
                             </select>
                         </td>
@@ -188,7 +188,7 @@
 
 {% else %}
 <h5 class="text-info text-center">
-Укажите сумму и оплатившего для добавления потребителей.
+Укажите сумму и оплатившего для добавления потребителей
 </h5>
 {% endif %}
 
