--- a/templates/edit.html
+++ b/templates/edit.html
@@ -33,27 +33,34 @@
 
 <!--Траты-->
 <div class="card mb-2">
+    <!--
     <div class="card-header">
         <p class="text-center h5">Траты</p>
     </div>
+    -->
     <div class="card-body justify-content-center p-1">
 
         {% if g.budget.spending_list.__len__() == 0 %}
 
-        <div class="d-inline-flex flex-row">
-            <a href="{{url_for('budget.add_spending')}}">
-             <p class="text-primary mr-1">Добавить</p>
-            </a>
-            <!--
-            <form method="post" name="addspending"
-                  action="{{url_for('budget.add_spending')}}">
-                <input name="addspending" type="image"  alt="Добавить" src="{{url_for('static', filename='plus.png')}}"
-                       class="pictobutton">
-            </form>
-            -->
-        </div>
+        <table class="table table-striped table-sm">
+            <td></td>
+            <td colspan="3" align="center">
+                <form method="post" name="addspending" action="{{url_for('budget.add_spending')}}">
+                <input class="form-control btn-primary" name="ok" type="submit" value="Добавить">
+                </form>
+            </td>
+            <td></td>
+        </table>
         {% else %}
         <table class="table table-striped table-sm">
+            <td></td>
+            <td colspan="3" align="center">
+                <form method="post" name="addspending" action="{{url_for('budget.add_spending')}}">
+                <input class="form-control btn-primary" name="ok" type="submit" value="Добавить">
+                </form>
+            </td>
+            <td></td>
+            <!--
                 <td></td>
                 <td>
                     <a href="{{url_for('budget.add_spending')}}">
@@ -68,6 +75,7 @@
                            class="pictobutton">
                     </form>
                 </td>
+                -->
 
             {% for s in g.budget.spending_list.__reversed__() %}
             <tr>
