Добавлен атрибут к трате

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -94,7 +94,12 @@
                         </div>
                     </td>
                     <td class="align-middle">
-                        <p class="text-success mb-0">{{s.amount}}</p>
+                        <div>
+                            <p class="text-success mb-0">{{s.amount}}</p>
+                        </div>
+                        <div>
+                            <small class="text-info">{{s.attr.memo}}</small>
+                        </div>
                     </td>
                     <td class="align-middle">
                         <p class="text-body mb-0">{{s.payer.name}}</p>
