--- a/templates/editspending.html
+++ b/templates/editspending.html
@@ -60,6 +60,12 @@
                         <input type="text" class="form-control" name="spendingmemo" id="spendingMemo"  value="{{spending.memo}}">
                     </div>
                 </div>
+                <div class="col-auto">
+                    <div class="form-group">
+                        <label for="spendingAttr">Тэг</label>
+                        <input type="text" class="form-control" name="spendingattr" id="spendingAttr"  value="{{spending.attr.memo}}">
+                    </div>
+                </div>
             </div>
             <div class="row align-items-center">
                 <div class="col-auto">
